# 2026-glados-checkin

./: .gitignore  README.md  SYNC_GUIDE.md  checkin.py  flake.nix  glados-checkin.nix  pyproject.toml  requirements.txt
.github/: last-active.txt
.github/workflows/: checkin.yml
glados_checkin/: __init__.py  __main__.py  app.py  bark.py  cli.py  config.py  habit.py  lunar.py  morning.py  notifiers.py  paths.py  renderers.py  shortcuts.py  utils.py
